@@ -58,6 +58,7 @@ Fixed bugs
 - fixed bug in freeing the reoptimization data if no problem exists
 - fixed bug in SCIPreoptReleaseData() when freeing all stored constraints
 - fixed bug when freeing the transformed problem via interactive shell if reoptimization is enabled
+- fixed two issues related to (near-)redundant logicor constraints in presolving
 
 Miscellaneous
 -------------
